--- a/ApiUtopiaAWSAMH/appsettings.json
+++ b/ApiUtopiaAWSAMH/appsettings.json
@@ -3,5 +3,13 @@
     "LogLevel": {
       "Default": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "AWSmysql": "server=awsamhmysql.coo9ijjnpqfx.us-east-1.rds.amazonaws.com;port=3306;user id=adminsql;password=admin123;database=utopia"
+  },
+  "ApiOAuth": {
+    "Issuer": "https://uy6r7hl7lj.execute-api.us-east-1.amazonaws.com/Prod/",
+    "Audience": "ApiUtopiaAWSAMH",
+    "SecretKey": "asdfghjklñASDFGHJKLÑASDFGHHFUBFHFWUEFFBFUFJSFHJSHF12313123"
   }
 }
